Fix breakpoints not showing up on macosx

--- a/styles/php-debug.atom-text-editor.less
+++ b/styles/php-debug.atom-text-editor.less
@@ -7,7 +7,7 @@
 //   }
 // }
 
-.gutter .line-numbers .php-debug-breakpoint {
+.gutter .line-number .php-debug-breakpoint {
     color: #fff;
     background-color: #0F0;
 }
